resym_core/tests/snapshots/type_diffing__struct_diffing-3.snap
---
source: resym_core/tests/type_diffing.rs
expression: diffed_type.data
---
 
-struct UserStructAdd { /* Size=0x10 */
+struct UserStructAdd { /* Size=0x18 */
   /* 0x0000 */ int32_t field1;
   /* 0x0008 */ void* field2;
+  /* 0x0010 */ char field3;
+  /* 0x0014 */ int32_t field4;
 };

