resym_core/tests/snapshots/type_diffing__struct_diffing-4.snap
---
source: resym_core/tests/type_diffing.rs
expression: diffed_type.data
---
-
-struct RemovedStruct { /* Size=0x4 */
-  /* 0x0000 */ int32_t field;
-};

