resym_core/tests/snapshots/type_diffing__struct_diffing_no_dependencies_with_line_numbers-5.snap
---
source: tests/type_diffing.rs
expression: diffed_type
---
  1 |+
  2 |+struct NewStruct { // Size=0x4
  3 |+  /* 0x0000 */ int32_t field;
  4 |+};

