resym_core/tests/snapshots/type_diffing__struct_diffing_no_dependencies_without_line_numbers-2.snap
---
source: tests/type_diffing.rs
expression: diffed_type
---
 
-struct UserStructRemove { // Size=0x18
+struct UserStructRemove { // Size=0x10
   /* 0x0000 */ int32_t field1;
-  /* 0x0004 */ char field2;
   /* 0x0008 */ void* field3;
-  /* 0x0010 */ int32_t field4;
 };

